@@ -28,6 +28,8 @@ K  5989	Empty FROM Field causes Exception
 K  6004	Filename isn't parsed correctly if charset is not set
 K  6072	copying a DataHandler from a parsed message to a new message fails
 K  6102	MimeMessage does not unfold address headers before parsing them
+K  6108	When using XGWTRUSTEDAPP mechanism, LOGIN should not be issued if no
+	authzid is specified
 
 
 		  CHANGES IN THE 1.5.0 RELEASE
